Upgrade screen refactor

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,9 @@ project(":core") {
 
         testCompileOnly 'org.projectlombok:lombok:1.18.32'
         testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
+
+        implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
+
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
